<resources>
    <string name="app_name">BLueTooth Config</string>
    <string name="product_detial">产品详情</string>
    <string name="fragment3_title">@string/main_service</string>
    <string name="datadetailed_title">@string/commondata_title</string>
    <string name="dataloggers_list_alias">@string/inverterdevicedata_alias</string>
    <string name="inverter_newpower">@string/InverterAct_current_power</string>
    <string name="inverter_control">@string/控制</string>
    <string name="inverter_parameter">@string/all_information</string>
    <string name="inverter_log">@string/rizhi_title</string>
    <string name="fragment1_alias">@string/dataloggers_dialog_change</string>
    <string name="fragment1_item2">@string/dataloggers_dialog_change</string>
    <string name="fragment2_title">@string/main_energy</string>
    <string name="fragment2_saving">@string/all_save_charge</string>
    <string name="fragment2_consume">@string/all_Take_charge</string>
    <string name="powerstation_change_co2">@string/capital_economize_CO2</string>
    <string name="powerstation_change_so2">@string/capital_economize_SO2</string>
    <string name="putin_xml_title">@string/datadetailed_headline</string>
    <string name="userdata_changepwd">@string/updatepwd_title</string>
    <string name="userdata_logout">@string/fragment4_logout</string>
    <string name="wifitool_xml_obtainname">@string/PutinActivity_search</string>
    <string name="rizhi_SN">@string/dataloggers_list_serial</string>
    <string name="rizhi_type">@string/datadetailed_genre</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="CapitalActivity_reduction_co2">@string/capital_economize_CO2</string>
    <string name="CapitalActivity_reduction_so2">@string/capital_economize_SO2</string>
    <string name="PutingAct_content">@string/headview_content</string>
    <string name="utf_day">@string/all_time_day</string>
    <string name="utf_month">@string/all_time_month</string>
    <string name="utf_year">@string/all_time_year</string>
    <string name="utf_all_year">@string/all_time_all</string>
    <string name="ahtool_pwd">@string/register_xml_password</string>
    <string name="WifiNewtoolAct_wifi_tpwd">@string/register_xml_password</string>
    <string name="register_password_no_blank">@string/login_no_pwd</string>
    <string name="loginerror">@string/all_login_error</string>
    <string name="wifitool_no_pwd">@string/login_no_pwd</string>
    <string name="soft_update_title">@string/newversion</string>
    <string name="dataloggers_add_no_v">@string/dataloggers_add_no_full</string>
    <string name="xlistview_header_hint_normal">@string/pull_to_refresh</string>
    <string name="pull_to_refresh_pull_label">@string/pull_to_refresh</string>
    <string name="release_to_refresh">@string/pull_to_refresh_release_label</string>
    <string name="release_to_load">@string/pull_to_refresh_release_label</string>
    <string name="xlistview_header_hint_ready">@string/pull_to_refresh_release_label</string>
    <string name="xlistview_footer_hint_ready">@string/pull_to_refresh_release_label</string>
    <string name="refreshing">@string/loading</string>
    <string name="xlistview_header_hint_loading">@string/loading</string>
    <string name="pull_to_refresh_refreshing_label">@string/loading</string>
    <string name="DataloggersAct_load">@string/loading</string>
    <string name="refresh_succeed">@string/load_succeed</string>
    <string name="refresh_fail">@string/load_fail</string>
    <string name="putin_on_data">@string/all_blank</string>
    <string name="all_long">@string/geographydata_longitude</string>
    <string name="all_lat">@string/geographydata_latitude</string>
    <string name="datalogcheck_collector_blank">@string/ShineWifiSet_sn</string>
    <string name="datalogcheck_collector_checkcode_blank">@string/ShineWifiSet_code</string>
    <string name="mipcaQRCode_title">@string/all_twodimension</string>
    <string name="city_title">@string/geographydata_city</string>
    <string name="putin_problem_item1">@string/countryandcity_select</string>
    <string name="CacheVideoAct_please_select">@string/countryandcity_select</string>
    <string name="priorit_item1">@string/fragment2_right_item1</string>
    <string name="priorit_item2">@string/fragment2_right_item2</string>
    <string name="priorit_item3">@string/fragment2_right_item3</string>
    <string name="priorit_item4">@string/fragment2_right_item4</string>
    <string name="priorit_item5">@string/fragment2_right_item5</string>
    <string name="priorit_item6">@string/fragment2_right_item6</string>
    <string name="wifitool_obtain_name">@string/ahtool_wifi_blank</string>
    <string name="WifiNewtoolAct_wifi_name">@string/ahtool_wifi_blank</string>
    <string name="WifiNewtoolAct_wifi_pwd">@string/ahtool_wifipwd_blank</string>
    <string name="datalogcheck_check_ok">@string/DatalogCheckActivity_regist_success</string>
    <string name="all_server_overtime">@string/all_http_failed</string>
    <string name="inverterset_set_no_server">@string/ahtool_wifi_falied_retry</string>
    <string name="inverterset_set_no">@string/ahtool_wifi_falied_retry</string>
    <string name="all_longandlat_failed">@string/geographydata_obtain_no</string>
    <string name="all_server_url">@string/datalogcheck_check_no_server</string>
    <string name="all_error">@string/serviceerror</string>
    <string name="all_prompt">@string/reminder</string>
    <string name="all_wifi_failed">@string/dataloggers_dialog_connectwifi</string>
    <string name="all_edittext">@string/ScanAct_manually</string>
    <string name="utf_no_record">@string/all_data_inexistence</string>
    <string name="all_RSOC">@string/storage_percent</string>
    <string name="storagedps_list1_item7">@string/storage_percent</string>
    <string name="all_Flash">@string/all_Lost</string>
    <string name="load_succeed">@string/all_success</string>
    <string name="load_fail">@string/all_failed</string>
    <string name="datadetailed_message_failed">@string/all_failed</string>
    <string name="ahtool_wifi_setsidd_ok">@string/all_success</string>
    <string name="ahtool_wifi_falied_numberenough">@string/all_failed</string>
    <string name="family_title">@string/fragment2_left_item2</string>
    <string name="dataloggers_declte_title">@string/dataloggers_dialog_delete</string>
    <string name="dataloggers_inquire_no">@string/dataloggers_dialog_connectwifi</string>
    <string name="family_list_title_name">@string/fragment2_left_item2</string>
    <string name="family_list_title_power">@string/fragment1_power</string>
    <string name="geographydata_country">@string/country_title</string>
    <string name="geographydata_select">@string/countryandcity_first_country</string>
    <string name="inverter_title">@string/all_interver</string>
    <string name="inverterset_title">@string/all_interver</string>
    <string name="inverterset_set_no_time">@string/storageset_no_time</string>
    <string name="inverterset_set_no_value">@string/storageset_no_value</string>
    <string name="PutingAct_etContent">@string/all_import</string>
    <string name="fragment4_about">@string/about_title</string>
    <string name="fragment4_title">@string/main_me</string>
    <string name="login_no_user">@string/DatalogCheckAct_username_pwd_empty</string>
    <string name="fragment1_isrelieve">@string/dataloggers_declte_prompt</string>
    <string name="storage_leave">@string/all_Standby</string>
    <string name="storage_electricize">@string/all_Charge</string>
    <string name="storage_discharge">@string/all_Discharge</string>
    <string name="storage_fault">@string/all_Fault</string>
    <string name="storage_close">@string/all_Lost</string>
    <string name="photovoltaic_title">@string/fragment2_left_item4</string>
    <string name="products_title">@string/fragment3_product</string>
    <string name="register_gain_longandlat">@string/geographydata_obtain_longandlat</string>
    <string name="register_username_no_short">@string/login_no_userlength</string>
    <string name="retrievepwd_putinpwd">@string/Login_username_hint</string>
    <string name="retrievepwd_failed_username_blank">@string/Login_username_hint</string>
    <string name="retrievepwd_failed_suited">@string/datalogcheck_check_no_verification</string>
    <string name="usernamefalse">@string/datalogcheck_check_no_userexist</string>
    <string name="rizhi_title_interver">@string/rizhi_title</string>
    <string name="rizhi_title_storage">@string/rizhi_title</string>
    <string name="CacheVideoAct_delete">@string/MessagesActivity_delete</string>
    <string name="message_clearaway">@string/MessagesActivity_delete</string>
    <string name="message_isclearaway">@string/myquestion_isdecete</string>
    <string name="MessagesActivity_delete_msg">@string/myquestion_isdecete</string>
    <string name="PutingAct_commit">@string/putin_title</string>
    <string name="CacheVideoAct_cancel_cache">@string/all_no</string>
    <string name="Fragment4_cancel">@string/all_no</string>
    <string name="CacheVideoAct_delete_no">@string/all_no</string>
    <string name="VideoCenterAct_title">@string/InfoCenterAct_video</string>
    <string name="DatalogCheckAct_country_empty">@string/countryandcity_must_country</string>
    <string name="DatalogCheckAct_email_empty">@string/register_email_no_blank</string>
    <string name="DatadetailedAct_send_success">@string/all_success</string>
    <string name="inverterdevicedata_checkcode">@string/all_collectorverificationnumber</string>
    <string name="zhibao_item_sn">@string/dataloggers_list_serial</string>
    <string name="storageset_ppv">@string/storageset_no_value</string>
    <string name="storageset_edittext">@string/storageset_no_value</string>
    <string name="login_no_pwd">@string/DatalogCheckAct_username_pwd_empty</string>
    <string name="countryandcity_select">@string/countryandcity_first_country</string>
    <string name="m101添加设备">@string/m添加设备</string>
    <string name="m102充电桩">@string/充电桩</string>
    <string name="m103充电">@string/m充电</string>
    <string name="m104充电记录">@string/m充电记录</string>
    <string name="m106选择充电桩">@string/m选择充电桩</string>
    <string name="m123暂停充电">@string/m108停止充电</string>
    <string name="m132切换">@string/m切换</string>
    <string name="m133添加">@string/DataloggersAct_add</string>
    <string name="m135删除成功">@string/删除成功</string>
    <string name="m139添加成功">@string/添加成功</string>
    <string name="m140不能为空">@string/不能为空</string>
    <string name="m142授权管理">@string/m授权管理</string>
    <string name="m修改成功">@string/修改成功</string>
    <string name="下一步">下一步</string>
    <string name="ahtool_wifi_blank">请输入路由器名称</string>
    <string name="ahtool_wifipwd_blank">请输入路由器密码</string>
    <string name="window_text2">请观察设备按键内测的蓝色LED灯，蓝色LED灯由快闪(5次每秒)变为慢闪(1次每秒)表示配置成功</string>
    <string name="高级设置">高级设置</string>
    <string name="config_fail">配置失败</string>
    <string name="switch_config_mode">更换配置模式</string>
    <string name="config_immediately">立即配置</string>
    <string name="datalog_success">采集器配置成功</string>
    <string name="wait_one_minute">采集器配置成功后若不在线，请等待一分钟后刷新数据</string>
    <string name="back_to_plant">返回电站</string>
    <string name="more_error_analysis">更多故障分析</string>
    <string name="bluetooth_scaning">正在搜索蓝牙设备…</string>
    <string name="search_bluetooth">搜索蓝牙设备</string>
    <string name="nearby_bluetooth">附近可配网的蓝牙</string>
    <string name="connet_tips">请从以下列表中选择序列号名称一致的蓝牙进行连接</string>
    <string name="connect_wifi">连接无线路由器</string>
    <string name="no_bluetooth">未连接蓝牙设备</string>
    <string name="bluetooth_onoff">请检查手机蓝牙是否开启</string>
    <string name="bluetooth_rescan">重新搜索蓝牙设备</string>
</resources>