<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white_background"
    android:layout_height="match_parent">

    <include layout="@layout/toobar_title" />

    <include layout="@layout/layout_title_step4" />


    <ImageView
        android:id="@+id/iv_error_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xa100"
        android:src="@drawable/config_error_1" />


    <ImageView
        android:id="@+id/iv_error_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xa10"
        android:src="@drawable/config_error_2" />



    <TextView
        android:id="@+id/tv_config_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/config_fail"
        android:textColor="@color/title_bg_white"
        android:textSize="@dimen/sizea_title" />



    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/xa30"
        android:padding="@dimen/xa30"
        android:text="@string/window_text2"
        android:textColor="@color/title_bg_white"
        android:textSize="@dimen/xa24"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_error_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xa30"
        android:padding="@dimen/xa30"
        android:drawableEnd="@drawable/icon_more"
        android:text="@string/more_error_analysis"
        android:textColor="@color/headerView"
        android:textSize="@dimen/xa24"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ya88"
        android:layout_marginLeft="@dimen/xa100"
        android:layout_marginRight="@dimen/xa100"
        android:background="@drawable/selector_circle_btn_blue"
        android:text="@string/switch_config_mode"
        android:textColor="@color/white1"
        android:textSize="@dimen/xa30" />


</LinearLayout>