<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/bluetooth_scan_fail"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_error_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/bluetooth_scan_error" />


    <TextView
        android:id="@+id/tv_no_connect"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/xa100"
        android:layout_marginTop="@dimen/xa60"
        android:gravity="center"
        android:text="@string/no_bluetooth"
        android:textColor="@color/title_bg_white"
        android:textSize="@dimen/sizea_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/xa20"
        android:gravity="start|center"
        android:paddingStart="@dimen/xa60"
        android:text="@string/bluetooth_onoff"
        android:textColor="@color/title_bg_white"
        android:textSize="@dimen/sizea_title" />


    <TextView
        android:id="@+id/tv_retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xa100"
        android:layout_margin="@dimen/xa30"
        android:background="@drawable/selector_circle_btn_blue"
        android:gravity="center"
        android:text="@string/bluetooth_rescan"
        android:textColor="@color/white_background"
        android:textSize="@dimen/sizea_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</LinearLayout>